1998-11-27  bertrand  <Bertrand.Guiheneuf@inria.fr>

	* gnome-canvas-line.c (gnome_canvas_line_draw): use the new parameter
	in item_to_canvas to know the actual number of points drawn.

1998-11-27  bertrand  <Bertrand.Guiheneuf@inria.fr>

	* gnome-canvas-line.c (item_to_canvas): Don't draw twice the same point
	speeds up a lot when line contains a lot of points and the zoom factor
	is very small.

Fri Nov 27 00:34:44 1998  George Lebl  <jirka@5z.com>

	* gnome-pixmap.c: check the visuals and if imlib and gdk visuals
	  are the same, morph ourselves into a GTK_NO_WINDOW widget and
	  work more like gtkpixmap

	* gnome-stock.c: combine_mask only needs to be called if gnomepixmap
	  is a window widget otherwise it spits out a warning

1998-11-27  Jeff Garzik  <jgarzik@pobox.com>

	* gnome-dialog-util: (gnome_question_dialog*, gnome_ok_cancel*):
	NULL callbacks now supported.

	* gnome-geometry.c:
	Added API docs.

	* gnome-calculator.c, gnome-client.c, gnome-dateedit.c,
	gnome-entry.c, gnome-font-picker.c, gnome-font-selector.c,
	gnome-geometry.c, gnome-init.c, gnome-mdi-session.c,
	gnome-scores.c, gnome-stock.c, gtk-ted.c,
	gtkdial.c, gtkspell.c, stock_demo.c, ted_demo.c,
	winhints_demo.c:

        Replaced sprintf calls with g_snprintf.
        Updated a couple hardcoded length values to instead use sizeof().

Thu Nov 26 21:20:10 1998  George Lebl  <jirka@5z.com>

	* gnome-pixmap-entry.c: added inline docs

1998-11-26  James Henstridge  <james@daa.com.au>

	* gnometypes.c: added ability to register new boxed types.  This
	is encapsulated in the function gnome_type_register_boxed, which
	maybe should be moved to GTK.

	* gnome-boxed.defs: added definitions of GdkImlibImage and
	GnomeCanvasPoints, so type id's will be generated for them.

	* gnome-canvas-image.c, gnome-canvas-line.c,
	gnome-canvas-polygon.c, gnome-canvas-rect-ellipse.c,
	gnome-canvas-text.c: changed occurences of GTK_TYPE_POINTER to
	GTK_TYPE_GDK_IMLIB_IMAGE or GTK_TYPE_GNOME_CANVAS_POINTS where