@@ -1,3 +1,12 @@
+1998-11-27  Martin Baulig  <martin@home-of-linux.org>
+
+	* gnome-dialog.c (gnome_dialog_append_button_with_pixmap):
+	New function to add arbitrary button with a pixmap, if the
+	pixmap is NULL this is equivalent to gnome_dialog_append_button.
+	(gnome_dialog_append_buttons_with_pixmaps): New function to
+	add multiple buttons with pixmaps. This is basically what
+	gnome_dialog_append_buttonsv does for ordinary buttons.
+	
 1998-11-27  bertrand  <Bertrand.Guiheneuf@inria.fr>
 
 	* gnome-canvas-line.c (gnome_canvas_line_draw): use the new parameter
